# wabag-bureau-ordre

./: .gitignore  Projet Application Bureau d'ordre.xlsx  README.md  render.yaml
.github/workflows/: build-desktop.yml  keepalive.yml
apps/desktop/: .env.production  electron-builder.yml  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/electron/: main.cjs  preload.cjs
apps/desktop/public/: guide.html
apps/server/: .env.example  pyproject.toml  requirements.txt  run_local.py
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0001_initial.py
apps/server/app/: main.py
apps/server/app/core/: config.py  deps.py  security.py
apps/server/app/db/: mongo.py  session.py
apps/server/app/models/: __init__.py  audit.py  history.py  mail.py  user.py
apps/server/app/routers/: assistant.py  attachments.py  audit.py  auth.py  documents.py  exports.py  health.py  insights.py  stats.py  users.py
apps/server/app/schemas/: assistant.py  audit.py  auth.py  mail.py  users.py
apps/server/app/services/: attachments.py  audit.py  exports.py  insights.py  numbering.py  queries.py  serialize.py  stats.py
apps/server/scripts/: make_admin.py  seed_admin.py
apps/server/tests/: conftest.py  test_api.py  test_attachments.py  test_audit.py  test_auth.py  test_documents.py  test_exports.py  test_insights.py  test_numbering.py  test_stats.py  test_users.py
apps/server/wabag_bureau_ordre_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
design/wabag-bureau-ordre/: app.js  index.html  styles.css
docs/: DEPLOY.md
(+40 files in other folders)
