[project]
name = "wabag-bureau-ordre-server"
version = "1.0.0"
description = "WABAG Bureau d'Ordre — backend API (FastAPI + PostgreSQL)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "passlib[argon2]>=1.7.4",
  "argon2-cffi>=23.1",
  "pyjwt>=2.10",
  "python-multipart>=0.0.12",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27", "ruff>=0.8"]

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
